<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnu_archivo"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/menu_archivo"
        app:showAsAction="always" />
    <item
        android:id="@+id/mnu_editar"
        android:title="@string/menu_editar"
        app:showAsAction="never">
        <menu>
            <group android:id="@+id/gropu1">
                <item
                    android:id="@+id/mnu_cortar"
                    android:title="Cortar" />
                <item
                    android:id="@+id/mnu_copiar"
                    android:title="Copiar" />
                <item
                    android:id="@+id/mnu_pegar"
                    android:title="Pegar" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/mnu_listaContactos"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/menu_listaContactos"
        app:showAsAction="always" />
    <item
        android:id="@+id/mnu_acercaDe"
        android:title="@string/menu_acercaDe"
        app:showAsAction="ifRoom" />
</menu>